--- a/index.html
+++ b/index.html
@@ -37,13 +37,38 @@
     <section class="main">
         <div class="container">
             <div class="main_content">
-
+                <h1>Denis <br>
+                    Novik</h1>
+                <p>UX | UI designer <br>
+                    24 years old, Minsk</p>
+                <span>RU | ENG</span>
             </div>
 
             <div class="main_img">
-
+                <img src="img/Group 2.1.png" alt="photo">
             </div>
-            block_element__modificator
+        </div>
+    </section>
+
+    <section class="main_about">
+        <div class="container">
+            <div class="about">
+                <h1>About me</h1>
+                <p>Hi, I'm Denis – UX/UI designer from Minsk. <br> 
+                    I'm interested in design and everything connected with it. </p>
+                    
+                  <p>  I'm studying at courses "Web and mobile design <br>
+                    interfaces" in IT-Academy. </p>
+                    
+                   <p> Ready to implement excellent projects <br>
+                     with wonderful people.</p>
+            </div>    
+        </div>
+    </section>
+
+    <section>
+        <div class="container">
+
         </div>
     </section>
 
