--- a/index.html
+++ b/index.html
@@ -54,20 +54,55 @@
         <div class="container">
             <div class="about">
                 <h1>About me</h1>
-                <p>Hi, I'm Denis – UX/UI designer from Minsk. <br> 
+                <p>Hi, I'm Denis – UX/UI designer from Minsk. <br>
                     I'm interested in design and everything connected with it. </p>
-                    
-                  <p>  I'm studying at courses "Web and mobile design <br>
+
+                <p> I'm studying at courses "Web and mobile design <br>
                     interfaces" in IT-Academy. </p>
-                    
-                   <p> Ready to implement excellent projects <br>
-                     with wonderful people.</p>
-            </div>    
+
+                <p> Ready to implement excellent projects <br>
+                    with wonderful people.</p>
+            </div>
         </div>
     </section>
 
-    <section>
+    <section class="main_skills">
         <div class="container">
+            <div class="main_skills_content">
+                <h1>Skills</h1>
+                <p>I work in such programs as</p>
+            </div>
+
+            <div class="icon">
+                <div class="row">
+                    <div class="col-3">
+                        <img src="img/Group (1).png" alt="">
+                        <p>Adobe <br>
+                            Photoshop</p>
+                        <img src="img/Group 2.png" alt="">
+                    </div>
+                    <div class="col-3">
+                        <img src="img/Group 2 (1).png" alt="">
+                        <p>Adobe <br>
+                            Illustrator</p>
+                        <img src="img/Group 3.png" alt="">
+                    </div>
+                    <div class="col-3">
+                        <img src="img/Group (2).png" alt="">
+                        <p>Adobe
+                            After Effects</p>
+                        <img src="img/Group 2.png" alt="">
+                    </div>
+                    <div class="col-3 ">
+                        <div class="figma">
+                            <img src="img/Group (3).png" alt="">
+                        </div>
+                        <p>Figma</p>
+                        <img src="img/Group 3.png" alt="">
+                    </div>
+                </div>
+            </div>
+
 
         </div>
     </section>
@@ -84,7 +119,7 @@
         </div>
     </footer>
 
-    <script src="js/core.js"></script>
+
 
 </body>
 
